Use codbex-platform-parent (#562)