@@ -3,9 +3,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.sonatype.oss</groupId>
-    <artifactId>oss-parent</artifactId>
-    <version>9</version>
+    <groupId>com.codbex.platform</groupId>
+    <artifactId>codbex-platform-parent</artifactId>
+    <version>1.0.0</version>
   </parent>
 
   <name>codbex - kronos - parent</name>
@@ -37,46 +37,20 @@
   <properties>
     <project.title>codbex kronos</project.title>
 
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
-    <dirigible.version>10.4.1</dirigible.version>
-
-    <java.version>17</java.version>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
-
     <scmVersionType>branch</scmVersionType>
     <profile.content.phase>none</profile.content.phase>
-    <license.header.location>licensing-header.txt</license.header.location>
 
     <antlr4-maven-plugin.version>4.13.1</antlr4-maven-plugin.version>
-    <maven.compiler.plugin.version>3.12.1</maven.compiler.plugin.version>
-    <git-commit-id-plugin.version>4.9.10</git-commit-id-plugin.version>
-    <license-maven-plugin.version>4.5</license-maven-plugin.version>
-    <maven.clean.plugin.directory>src/main/resources/META-INF/dirigible</maven.clean.plugin.directory>
-    <maven.surefire.plugin.version>3.2.5</maven.surefire.plugin.version>
 
     <dirigible.acorn.version>7.2.0</dirigible.acorn.version>
 
-    <jaxb.version>2.3.1</jaxb.version>
-    <ngdbc.version>2.19.16</ngdbc.version>
-    <webjars-locator>0.50</webjars-locator>
     <guava.version>33.2.0-jre</guava.version>
     <javax.websocket-api.version>1.1</javax.websocket-api.version>
-    <org.springdoc.openapi.ui.version>1.7.0</org.springdoc.openapi.ui.version>
     <antlr4-runtime.version>4.13.1</antlr4-runtime.version>
-    <junitparams.version>1.1.1</junitparams.version>
     <scp-cf.version>4.24.0</scp-cf.version>
-    <httpmime.version>4.5.14</httpmime.version>
     <jetbrains.annotations.version>24.1.0</jetbrains.annotations.version>
-    <olingo.version>3.1.4</olingo.version>
 
     <hamcrest.all.version>1.3</hamcrest.all.version>
-    <hakky.logcaptor.version>2.9.2</hakky.logcaptor.version>
-    <httpasyncclient.version>4.1.5</httpasyncclient.version>
-    <selenium.version>4.5.0</selenium.version>
-    <selenium.webdriver.manager.version>5.8.0</selenium.webdriver.manager.version>
-    <jacoco.version>0.8.12</jacoco.version>
   </properties>
 
   <dependencies>
@@ -159,7 +133,7 @@
     </dependency>
     <dependency>
       <groupId>org.springdoc</groupId>
-      <artifactId>springdoc-openapi-ui</artifactId>
+      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
     </dependency>
     <dependency>
       <groupId>com.h2database</groupId>
@@ -182,40 +156,6 @@
 
   <dependencyManagement>
     <dependencies>
-      <dependency>
-        <groupId>com.codbex.olingo</groupId>
-        <artifactId>olingo-odata2-lib</artifactId>
-        <version>${olingo.version}</version>
-        <type>pom</type>
-      </dependency>
-      <dependency>
-        <groupId>com.codbex.olingo</groupId>
-        <artifactId>olingo-odata2-core</artifactId>
-        <version>${olingo.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.eclipse.dirigible</groupId>
-        <artifactId>dirigible-dependencies</artifactId>
-        <version>${dirigible.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-
-      <dependency>
-        <groupId>org.webjars</groupId>
-        <artifactId>webjars-locator</artifactId>
-        <version>${webjars-locator}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springdoc</groupId>
-        <artifactId>springdoc-openapi-ui</artifactId>
-        <version>${org.springdoc.openapi.ui.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>javax.xml.bind</groupId>
-        <artifactId>jaxb-api</artifactId>
-        <version>${jaxb.version}</version>
-      </dependency>
       <dependency>
         <groupId>javax.websocket</groupId>
         <artifactId>javax.websocket-api</artifactId>
@@ -243,34 +183,11 @@
         <version>${scp-cf.version}</version>
       </dependency>
       <dependency>
-        <groupId>com.sap.cloud.db.jdbc</groupId>
-        <artifactId>ngdbc</artifactId>
-        <version>${ngdbc.version}</version>
-      </dependency>
-      <dependency>
         <groupId>org.jetbrains</groupId>
         <artifactId>annotations</artifactId>
         <version>${jetbrains.annotations.version}</version>
       </dependency>
 
-      <dependency>
-        <groupId>org.apache.httpcomponents</groupId>
-        <artifactId>httpmime</artifactId>
-        <version>${httpmime.version}</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.httpcomponents</groupId>
-        <artifactId>httpasyncclient</artifactId>
-        <version>${httpasyncclient.version}</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>io.github.hakky54</groupId>
-        <artifactId>logcaptor</artifactId>
-        <version>${hakky.logcaptor.version}</version>
-        <scope>test</scope>
-      </dependency>
       <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-inline</artifactId>
@@ -281,18 +198,6 @@
         <groupId>org.hamcrest</groupId>
         <artifactId>hamcrest-all</artifactId>
         <version>${hamcrest.all.version}</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>pl.pragmatists</groupId>
-        <artifactId>JUnitParams</artifactId>
-        <version>${junitparams.version}</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>io.github.bonigarcia</groupId>
-        <artifactId>webdrivermanager</artifactId>
-        <version>${selenium.webdriver.manager.version}</version>
         <scope>test</scope>
       </dependency>
 
@@ -487,133 +392,6 @@
         <version>${project.version}</version>
       </dependency>
     </dependencies>
-
   </dependencyManagement>
-
-  <profiles>
-    <profile>
-      <id>default</id>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>${maven.surefire.plugin.version}</version>
-            <configuration>
-              <argLine>
-                --add-opens java.base/java.lang=ALL-UNNAMED
-                --add-opens java.base/java.math=ALL-UNNAMED
-                --add-opens java.base/java.util=ALL-UNNAMED
-                --add-opens java.base/java.util.concurrent=ALL-UNNAMED
-                --add-opens java.base/java.net=ALL-UNNAMED
-                --add-opens java.base/java.text=ALL-UNNAMED
-              </argLine>
-            </configuration>
-          </plugin>
-          <plugin>
-            <groupId>org.jacoco</groupId>
-            <artifactId>jacoco-maven-plugin</artifactId>
-            <version>${jacoco.version}</version>
-            <executions>
-              <execution>
-                <id>prepare-agent</id>
-                <goals>
-                  <goal>prepare-agent</goal>
-                </goals>
-              </execution>
-            </executions>
-            <configuration>
-              <rules>
-                <rule>
-                  <element>SOURCEFILE</element>
-                  <excludes>
-                    <exclude>*src/test/*</exclude>
-                  </excludes>
-                </rule>
-              </rules>
-            </configuration>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>${maven.compiler.plugin.version}</version>
-            <configuration>
-              <source>${maven.compiler.source}</source>
-              <target>${maven.compiler.target}</target>
-              <debug>true</debug>
-              <debuglevel>lines,vars,source</debuglevel>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <profile>
-      <id>license</id>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>com.mycila</groupId>
-            <artifactId>license-maven-plugin</artifactId>
-            <version>${license-maven-plugin.version}</version>
-            <inherited>true</inherited>
-            <configuration>
-              <header>${license.header.location}</header>
-              <aggregate>true</aggregate>
-              <properties>
-                <inceptionYear>${project.inceptionYear}</inceptionYear>
-                <currentYear>${currentYear}</currentYear>
-              </properties>
-              <includes>
-                <include>src/**/*.java</include>
-                <include>src/**/*.xml</include>
-                <include>src/**/*.js</include>
-              </includes>
-              <excludes>
-                <exclude>**/logback.xml</exclude>
-                <exclude>**/logback-test.xml</exclude>
-                <exclude>**/src/test/resources/**</exclude>
-                <exclude>resources/resources-neo-sdk/**</exclude>
-              </excludes>
-            </configuration>
-            <dependencies>
-              <dependency>
-                <groupId>com.mycila</groupId>
-                <artifactId>license-maven-plugin-git</artifactId>
-                <version>${license-maven-plugin.version}</version>
-              </dependency>
-            </dependencies>
-            <executions>
-              <execution>
-                <id>format-license</id>
-                <phase>initialize</phase>
-                <goals>
-                  <goal>format</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>${maven.compiler.plugin.version}</version>
-            <configuration>
-              <source>${maven.compiler.source}</source>
-              <target>${maven.compiler.target}</target>
-              <debug>true</debug>
-              <debuglevel>lines,vars,source</debuglevel>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
-  </profiles>
-
 
 </project>
